kubernetes/hasura-jwt/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hasura-jwt-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: hasura-jwt
    template:
        metadata:
            labels:
                app: hasura-jwt
        spec:
            containers:
                - name: hasura-jwt-container
                  image: ghcr.io/53845714nf/hasura-jwt/hasura-jwt:latest
                  ports:
                      - containerPort: 3000
                  resources:
                      limits:
                          cpu: '0.5'
                          memory: 512Mi
                      requests:
                          cpu: '0.25'
                          memory: 256Mi
